--- a/Draw/ZhaJinHua/View/MoneyTreeView~ipad.xib
+++ b/Draw/ZhaJinHua/View/MoneyTreeView~ipad.xib
@@ -42,7 +42,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{18, 10}, {88, 104}}</string>
 						<reference key="NSSuperview" ref="668203424"/>
-						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -79,7 +78,6 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrameSize">{94, 44}</string>
 								<reference key="NSSuperview" ref="982430397"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="312083830"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -94,7 +92,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrameSize">{94, 44}</string>
 								<reference key="NSSuperview" ref="982430397"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="951146079"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -127,7 +124,6 @@
 						</array>
 						<string key="NSFrame">{{15, -4}, {94, 44}}</string>
 						<reference key="NSSuperview" ref="668203424"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="721423851"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="586323681">
@@ -139,7 +135,6 @@
 				</array>
 				<string key="NSFrameSize">{124, 114}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="982430397"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="586323681"/>
@@ -257,50 +252,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">20</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">MoneyTree</string>
-					<string key="superclassName">UIButton</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/MoneyTree.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">MoneyTreeView</string>
-					<string key="superclassName">UIView</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="moneyTree">MoneyTree</string>
-						<string key="popMessageBackgroundImageView">UIImageView</string>
-						<string key="popMessageBody">UIView</string>
-						<string key="popMessageLabel">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="moneyTree">
-							<string key="name">moneyTree</string>
-							<string key="candidateClassName">MoneyTree</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="popMessageBackgroundImageView">
-							<string key="name">popMessageBackgroundImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="popMessageBody">
-							<string key="name">popMessageBody</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="popMessageLabel">
-							<string key="name">popMessageLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/MoneyTreeView.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
